@@ -50,6 +50,9 @@ namespace AriaMaestosa
         
         GraphicalSequence* m_gseq;
         
+        
+        void getFirstAndLastSelectedMeasure(int* first, int* last);
+        
     public:
         LEAK_CHECK();
         
@@ -57,7 +60,7 @@ namespace AriaMaestosa
         ~MeasureBar();
         
         void render(int from_y);
-        void mouseDown(int x, int y);
+        void mouseDown(int x, int y, bool shiftPressed);
         void mouseDrag(int mousex_current, int mousey_current, int mousex_initial, int mousey_initial);
         void mouseUp(int mousex_current, int mousey_current, int mousex_initial, int mousey_initial);
         void rightClick(int x, int y);
